2005-11-01  Jb Evain  <jbevain@gmail.com>

	* Mono.Cecil/FunctionPointerType.cs
	  Mono.Cecil/ReflectionReader.cs
	  Mono.Cecil.Signatures/SignatureReader.cs:
		Work on function pointers.

	* Mono.Cecil/AssemblyInfo.cs:
		Increase Cecil SVN version.

	* Mono.Cecil/ArrayType.cs
	  Mono.Cecil/MethodSpecification.cs
	  Mono.Cecil/TypeSpecification.cs
	  Mono.Cecil/IMethodSpecification.cs
	  Mono.Cecil/GenericInstanceType.cs
	  Mono.Cecil/IGenericInstanceType.cs
	  Mono.Cecil/GenericInstanceMethod.cs
	  Mono.Cecil/IModifierType.cs
	  Mono.Cecil/IPinnedType.cs
	  Mono.Cecil/ReferenceType.cs
	  Mono.Cecil/IGenericInstanceMethod.cs
	  Mono.Cecil/PinnedType.cs
	  Mono.Cecil/PointerType.cs
	  Mono.Cecil/IPointerType.cs
	  Mono.Cecil/IReferenceType.cs
	  Mono.Cecil/IArrayType.cs
	  Mono.Cecil/ITypeSpecification.cs
	  Mono.Cecil/Modifiers.cs
	  Mono.Cecil.dll.sources:
		Uniformize the specification model.

2005-10-31  Jb Evain  <jbevain@gmail.com>

	* AUTHORS,
	  NEWS,
	  README,
	  TODO,
	  Mono.Cecil/AssemblyInfo.cs:
		Cecil 0.1 release.

	* Mono.Cecil/ReflectionReader.cs:
		Force value type property on known core types.

2005-10-28  Jb Evain  <jbevain@gmail.com>

	* Mono.Cecil/TypeReference.cs
	  Mono.Cecil/ReflectionReader.cs
	  Mono.Cecil/TypeDefinition.cs
	  Mono.Cecil/ModuleDefinition.cs
	  Mono.Cecil/ReflectionWriter.cs:
		Uniformize the API.

	* Mono.Cecil.Signatures/SignatureWriter.cs:
		Correct a bug in strings encoding in custom attributes.

	* CodeGen/templates/ImageWriter.cs
	  Mono.Cecil.Metadata/MetadataWriter.cs
	  Mono.Cecil/StructureWriter.cs
	  Mono.Cecil/ReflectionWriter.cs
	  Mono.Cecil.Binary/ImageWriter.cs:
		Implement a big of public key management,
		here we reserve space for the strong name
		signature if needed.

	* Mono.Cecil/StructureWriter.cs
	  Mono.Cecil/StructureReader.cs:
		Disable public key writing until
		it is implemented.

	* Mono.Cecil/GenericParameter.cs
	  Mono.Cecil/TypeReference.cs
	  Mono.Cecil/MethodReference.cs: